[package]
name = "nixmodule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
rand = "0.8"
toml = "0.5.8"
reqwest = {version = "0.11.10", default-features = false,  features = ["default-tls", "blocking"]}
structopt = "0.3.26"
flate2 = "1.0.22"
home-dir = "0.1.0"
colored = "2.0.0"
prettytable-rs = "^0.8"
serde = {version ="1.0.136",features = ["derive"]}