[package]
name = "nixmodule"
version = "0.1.0"
authors = ["landhb <landhb@github>"]
edition = "2021"
description = """
Simple qemu-kvm wrapper to automatically test out-of-tree linux kernel modules across multiple kernel versions.
"""
homepage = "https://github.com/landhb/nixmodule"
repository = "https://github.com/landhb/nixmodule"
keywords = ["lkm", "out-of-tree", "linux-kernel","qemu", "linux"]
readme = "README.md"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
rand = "0.8"
toml = "0.5.8"
reqwest = {version = "0.11.10", default-features = false,  features = ["rustls-tls-native-roots", "blocking"]}
structopt = "0.3.26"
flate2 = "1.0.22"
home-dir = "0.1.0"
colored = "2.0.0"
prettytable-rs = "^0.8"
serde = {version ="1.0.136",features = ["derive"]}